<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>net.tascalate.async</groupId>
	<artifactId>net.tascalate.async.parent</artifactId>
	<version>1.1.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Tascalate Async/Await</name>
	<url>https://github.com/vsilaev/tascalate-async-await</url>    
	<description>Async / Await asynchronous programming model for Java similar to the functionality available in C# 5. 
        The implementation is based on continuations for Java (see tascalate-javaflow).</description>

	<licenses>
		<license>
			<name>BSD 2-clause "Simplified" License</name>
			<url>https://opensource.org/licenses/BSD-2-Clause</url>
		</license>
	</licenses>


	<scm>
		<connection>scm:git:git://github.com/vsilaev/tascalate-async-await.git</connection>
		<developerConnection>scm:git:ssh://github.com:vsilaev/tascalate-async-await.git</developerConnection>
		<url>https://github.com/vsilaev/tascalate-async-await.git</url>
	</scm>

	<developers>
		<developer>
			<id>vsilaev</id>
			<name>Valery Silaev</name>
			<email>vsilaev at java.net</email>
		</developer>
	</developers>

	<modules>
		<module>net.tascalate.async.runtime</module>
		<module>net.tascalate.async.extras</module>
		<module>net.tascalate.async.resolver.propagated</module>
		<module>net.tascalate.async.resolver.provided</module>
		<module>net.tascalate.async.resolver.scoped</module>
		<module>net.tascalate.async.resolver.swing</module>
		<module>net.tascalate.async.tools.core</module>
		<module>net.tascalate.async.tools.maven</module>
		<module>net.tascalate.async.tools.javaagent</module>
		<module>net.tascalate.async.examples</module>
	</modules>


	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<tascalate.concurrent.version>0.9.5</tascalate.concurrent.version>
		<tascalate.javaflow.version>2.6.4</tascalate.javaflow.version>
		<tascalate.javaflow.extras.version>2.4.1</tascalate.javaflow.extras.version>
		<tascalate.asmx.version>9.2.0</tascalate.asmx.version>
		<tascalate.instrument.version>1.0.1</tascalate.instrument.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>net.tascalate.javaflow</groupId>
				<artifactId>net.tascalate.javaflow.api</artifactId>
				<version>${tascalate.javaflow.version}</version>
			</dependency>
			<dependency>
				<groupId>net.tascalate.javaflow</groupId>
				<artifactId>net.tascalate.javaflow.spi</artifactId>
				<version>${tascalate.javaflow.version}</version>
			</dependency>
			<dependency>
				<groupId>net.tascalate.javaflow</groupId>
				<artifactId>net.tascalate.javaflow.tools.instrument</artifactId>
				<version>${tascalate.javaflow.version}</version>
			</dependency>
			<dependency>
				<groupId>net.tascalate.javaflow</groupId>
				<artifactId>net.tascalate.javaflow.tools.javaagent</artifactId>
				<version>${tascalate.javaflow.version}</version>
			</dependency>
			<dependency>
				<groupId>net.tascalate.javaflow</groupId>
				<artifactId>net.tascalate.javaflow.extras</artifactId>
				<version>${tascalate.javaflow.extras.version}</version>
			</dependency>
			<dependency>
				<groupId>org.kohsuke.metainf-services</groupId>
				<artifactId>metainf-services</artifactId>
				<version>1.8</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>1.8.0-beta4</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-simple</artifactId>
				<version>1.8.0-beta4</version>
				<scope>runtime</scope>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.13.1</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

	<profiles>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.0.1</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>2.10.4</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.6</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<build>
		<plugins>
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.8</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>false</autoReleaseAfterClose>
				</configuration>
			</plugin> 
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.6.1</version>
				<executions>
					<execution>
						<id>default-compile</id>
						<goals>
							<goal>compile</goal>
						</goals>
						<configuration>
							<excludes>
								<exclude>module-info.java</exclude>
							</excludes>
						</configuration>
					</execution> 
				</executions>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.0.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19.1</version>
				<configuration>
					<includes>
						<include>**/*TestSuite.java</include>
					</includes>
					<excludes>
						<exclude>**/Abstract*</exclude>
					</excludes>
					<testFailureIgnore>true</testFailureIgnore>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.moditect</groupId>
					<artifactId>moditect-maven-plugin</artifactId>
					<version>1.0.0.Beta2</version>
					<executions>
						<execution>
							<id>add-module-infos</id>
							<phase>package</phase>
							<goals>
								<goal>add-module-info</goal>
							</goals>
							<configuration>
								<jvmVersion>9</jvmVersion>
								<module>
									<moduleInfoFile>src/main/java/module-info.java</moduleInfoFile>
								</module>
								<version>${project.version}</version>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>net.tascalate.javaflow</groupId>
					<artifactId>net.tascalate.javaflow.tools.maven</artifactId>
					<version>${tascalate.javaflow.version}</version>
					<!--
					<configuration>
						<includeTestClasses>false</includeTestClasses>
					</configuration>
					-->
					<executions>
						<execution>
							<phase>process-classes</phase>
							<goals>
								<goal>javaflow-enhance</goal>
							</goals>
						</execution>
					</executions>
				</plugin>

				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>net.tascalate.async</groupId>
										<artifactId>net.tascalate.async.tools.maven</artifactId>
										<versionRange>[1.1.0,)</versionRange>
										<goals>
											<goal>tascalate-async-enhance</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<execute>
											<runOnIncremental>true</runOnIncremental>
										</execute>
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>net.tascalate.javaflow</groupId>
										<artifactId>net.tascalate.javaflow.tools.maven</artifactId>
										<versionRange>[2.6.4,)</versionRange>
										<goals>
											<goal>javaflow-enhance</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<execute>
											<runOnIncremental>true</runOnIncremental>
										</execute>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
